# robbie

./: .gitignore  ACKNOWLEDGEMENTS  README.md
CAD/front_assembly/: front_assembly_LCD_Holder_v4.stl  front_assembly_pi_backplane_v4.stl
CAD/head_rotary_assembly/: head_gears_2_ring.stl  head_gears_3.scad  head_gears_3.stl  head_gears_3_brace.stl  head_gears_3_drive.stl
code/: requirements.txt  robbie.py
code_robbie/: main.py  requirements.txt  robbie.py  robbie9000_controller.py  sentance_generator.py
code_robbie/audio/: listen.py  music.py  playit.py  sayit.py
code_robbie/cpp/eye_manager/: CMakeLists.txt  main.cpp  readme.txt
code_robbie/cpp/eye_manager/graphics/: canvas_ity.hpp  clap_graphics.h  composer.cpp  composer.h
code_robbie/cpp/eye_manager/pc_version/eye_manager_pc/: eye_manager_pc.sln  eye_manager_pc.vcxproj  eye_manager_pc.vcxproj.filters  main.cpp
code_robbie/cpp/eye_manager/spi_display/: Display.cpp  Display.h  Interface.cpp  Interface.h  Round_1_28.cpp  Round_1_28.h
code_robbie/eye_manager/: eye_lids.py  eye_render.py  eye_renderer_cv2.py  eye_service.py  eye_service_pil.py  eye_service_ray.py  interlaced_graphics_manager.py  requirements.txt
code_robbie/utils/: doc_extracotr.py  fps_counter.py  graphics_manager.py  graphics_manager_demo.py  interlaced_graphics_manager.py  misc.py  network.py  regions_by_fitted_rec_32.py  robbie9000_settings.py  sleep_manager.py  test_sprite_speed.py  updated_region_finder.py
config/: history  setupnodes_1
container_robbie/: docker-compose.yml  run.sh
simulation_robbie/: gui.py  pose_and_IK.py
(+17 files in other folders)
